--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,19 +1,26 @@
 // Header
 .header {
   position: sticky;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
   height: 80px;
+  top: 0;
+  z-index: 9;
+  background: map-get($gray, "gray-0");
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   margin: 0 auto;
-  padding: map-get($spacers, 3);
   font-size: map-get($display-font-sizes, 5);
   font-weight: $font-weight-medium;
   line-height: $line-height-lg;
 
+  .container {
+    padding-top: map-get($spacers, 3);
+    padding-bottom: map-get($spacers, 3);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   @include media-breakpoint-up(lg) {
-    max-width: 90vw;
   }
 
   &__logo {
@@ -72,6 +79,7 @@
     transition: all 0.5s;
 
     .menu-logo {
+      max-width: 186px;
       margin-bottom: map-get($spacers, 4);
     }
 
@@ -81,6 +89,10 @@
 
     .main-menu {
       border-bottom: 1px solid map-get($gray, "gray-1");
+    }
+
+    .main-menu .menu-item:first-child .btn {
+      width: auto;
     }
 
     .sub-menu {
